# memory-systems-in-action-icml

./: FINDINGS.md  README.md  VISUALIZATIONS.md  paper.md  papers.json  proposal.md  stage_3_summary.md
lme-plus/: README.md  pyproject.toml
lme-plus/code/: agent.py  analyze_results.py  judge.py  main.py
lme-plus/code/adapters/: bge.py  bm25.py  builtin_mcp.py  filesystem.py  hybrid.py  mcp_filesystem.py  oracle.py  reranker.py  stella_v5.py
lme-plus/data/lme_plus/: LME_PUBLISHED_BASELINES.json
lme-plus/experiments/: node_10_stella_v5_50.py  node_12_bm25_100.py  node_13_bge_100.py  node_14_mcp_filesystem_100.py  node_15_keyword_100.py  node_16_oracle_100.py  node_17_reranker_100.py  node_1_oracle_baseline.py  node_2_filesystem.py  node_3_builtin_mcp.py  node_4_oracle_50.py  node_5_filesystem_50.py  node_6_builtin_mcp_50.py  node_7_oracle_50_fixed.py
lme-plus/results/node_10_stella_v5_50/: results_20260122_170140.json  summary_20260122_170140.json
lme-plus/results/node_11_hybrid_50/: results_20260122_173746.json  summary_20260122_173746.json
lme-plus/results/node_1_oracle_baseline/: results_20260122_154626.json  summary_20260122_154626.json
lme-plus/results/node_2_filesystem/: results_20260122_154806.json  summary_20260122_154806.json
lme-plus/results/node_3_builtin_mcp/: results_20260122_154943.json  summary_20260122_154943.json
lme-plus/results/node_4_oracle_50/: results_20260122_155617.json  summary_20260122_155617.json
lme-plus/results/node_5_filesystem_50/: results_20260122_155926.json  (+1 more)
lme-plus/scripts/: convert_to_environments.py  setup_data.py
(+240518 files in other folders)
