[project]
name = "lme-plus"
version = "0.1.0"
description = "LME+ Evaluation Framework"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "sentence-transformers>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code"]
